--- a/Client.vcxproj.filters
+++ b/Client.vcxproj.filters
@@ -14,4 +14,29 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mainspace.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="registerLogin.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="client.c">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mainspace.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="registerLogin.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="client.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
